fix: 마이페이지 나의 인증글 조회 api - ui 변경에 따른 로직 수정